samples/_failures_safe/1761496430_c098a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05c93315.c: In function ‘tokenize’:
./samples/SAFE/__tmp_05c93315.c:165:36: error: expected ‘]’ at end of input
  165 |         tokens[token_count].value[0
      |                                    ^
      |                                    ]
./samples/SAFE/__tmp_05c93315.c:165:9: error: expected declaration or statement at end of input
  165 |         tokens[token_count].value[0
      |         ^~~~~~
./samples/SAFE/__tmp_05c93315.c:165:9: error: expected declaration or statement at end of input
